Fix Homepage overflow

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -17,13 +17,14 @@
 body {
   background: #000;
   font-family: 'Clash Grotesk', sans-serif;
+  overflow-x: hidden;
 }
 
 
 /*Hero*/
 .custom-shape-divider-bottom {
   position: absolute;
-  width: 100%;
+  width: 150%;
   height: 100%;
   overflow: hidden;
   top: 0;
@@ -43,11 +44,11 @@ body {
   position: relative;
   display: block;
   width: 100%;
-  height: 800px;
+  height: 90%;
   transform: rotateY(180deg);
 }
 
 .custom-shape-divider-bottom .shape-fill {
-  fill: linear-gradient(to bottom, var(--primary-accent), var(--primary));
+  fill: #000;
 }
 
